--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -4,7 +4,7 @@ body {
       rgba(0, 0, 0, 0.3), 
       rgba(0, 0, 0, 0.3)
     ),
-    url(https://visme.co/blog/wp-content/uploads/2017/07/50-Beautiful-and-Minimalist-Presentation-Backgrounds-026.jpg);
+    url(https://images.hdqwalls.com/wallpapers/yellow-dark-minimal-abstract-5k-2i.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
